# matlab

./: .directory  .gitignore  2dmultigrid_testing_workspace.mat  AAAvcycle1d.m  CG.m  EKS.m  EKSM_genSylv_LRcomm.m  GenSylv_smallscale.m  Inhomogeneus_HelmholtsEq.m  ItGenSylv.m  ItGenSylv_setup.m  MG1d_standalone.m  README.md  SOR.m  SORM.m  Vmg1d.m  Vmg1d1.m  Vmg2d.m  Vmg2d_matrix.m  backslashpoisson.m  cd100-3.m  cd100.m  cd10000_3.m  cd15-3.m  cd15.m  cd20_3.m  cd45-3.m  cd45.m  cd_ioana3.m  cholesky.m  damped_jacobiM.m  data.m  data1023.m  data127.m  data128.m  data15.m  data16.m  data1Dpois.m  data256.m  data63.m  (+44 more)
MultiRB/: RKPG.m  cgkron.m  driverRKPG.m  get_rk_basis.m  matvec.m
MultiRB/RKPG/: CompareBases.m  CompareBlockBases.m  CompareIRKAshifts.m  DKSbound.m  LSvME_Poiss.fig  OneTwoSided.m  OneTwoSided.mat  README-RKPG.md  README.md  RKPG.m  RKPG_modified.m  RKPG_p.m  RKPG_sylv.m  RKPGblock.m  RKPGblock2.m  RKSM_Lyap_real.m  RKSM_adapt.m  adaptive_shifts.m  block_irka_test.m  comp_n500_tol1e-9.fig  drive_test.m  driverBlockRKPG.m  driverRKPG.m  driver_RKPG_sylv.m  dst_solve.m  ek_n800_tol1e-14.fig  extended_bound.m  extendedk__mat.mat  geometric_mesh.m  geometric_mesh2.m  geometric_mesh3.m  get_Ritz.m  get_ek_basis.m  get_irka_basis.m  get_irka_basis_complex.m  get_irka_basis_dst.m  get_irka_basis_p.m  get_irka_block_basis.m  get_nodes2.m  get_poly_basis.m  (+44 more)
MultiRB/ioana_version/: MultiRB.m  MultiRB_2side.m  MultiRB_Poisson_rank1rhs.m  MultiRB_Poisson_rank1rhs_2sided.m  MultiRB_nonsymrhs.m  MultiRB_noprec_Poisson_rank1rhs_2sided.m  MultiRB_with_functions.m  RKSM_Lyap_real.m  cgkron.m  diagonal_matrices.m  driverMRB_2sided.m  driverMRB_Poisson_rank1rhs.m  driverMRB_Poisson_rank1rhs_2sided.m  driverMRB_nonsymrhs.m  eq210beckermann.m  get_nodes2.m  matvec.m  max_u_plot.fig  project.m  resid_upperbound_iterations.fig  setup.m  setup_Poisson_rank1rhs.m  u_out.m  (+7 more)
first year talk/: pcg_kpik_time.fig  pcv_kpik_it.fig
hsl_mi20-2.0.0/: .directory  .nfs000000000003a5bc00001a5f  ChangeLog  Makefile.am  Makefile.in  acinclude.m4  configure  configure.ac
hsl_mi20-2.0.0/example/C/: Makefile.am  Makefile.in  hsl_mi20ds.c  hsl_mi20ds.output  hsl_mi20ds1.c  hsl_mi20ds1.output  hsl_mi20ss.c  hsl_mi20ss.output  hsl_mi20ss1.c  hsl_mi20ss1.output
hsl_mi20-2.0.0/example/Fortran/: Makefile.am  Makefile.in  hsl_mi20ds.f90  hsl_mi20ds.output  hsl_mi20ds1.f90  hsl_mi20ds1.output  hsl_mi20ss.f90  hsl_mi20ss.output  hsl_mi20ss1.f90  hsl_mi20ss1.output
hsl_mi20-2.0.0/src/: Makefile.am  Makefile.in  ddeps.f  hsl_mi20d_ciface.f90  hsl_mi20s.f90  hsl_mi20s_ciface.f90  sdeps.f  sdeps90.f90
rktoolbox/: Contents.m  Licence.txt  move_poles_expl.m  move_poles_impl.m  rat_krylov.m  rkfit.m  util_aaa.m  util_bary2rkfun.m  util_continuation_fom.m  util_linearise_nlep.m  util_linearize_nlep.m  util_matcell.m  util_nleigs.m  util_pencil_blocksizes.m  util_pencil_poles.m  util_qr.m
(+535 files in other folders)
